# Injecticide

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Createthefiles.ps1  Dockerfile  KILL_SWITCH.bat  LICENSE  README.md  START_SERVER_SAFE.bat  analyzer.py  analyzer_esf.py  architecture_profiles.py  architecture_scenarios.py  config.py  config_template.yaml  docker-compose.yml  e down --remove-orphans  endpoints.py  endpoints_new.py  executor.py  fix_permissions.bat  generator.py  main.py  nginx.conf  path_analyzer.py  payloads.py  pyproject.toml  redteam.py  reporter.py  requirements-minimal.txt  requirements.txt  run_web.py  run_web_safe.py  server_manager.ps1  start-prod.sh  start-web.bat  start-web.sh  trace.py  update_imports.py
configs/: default.yaml  full_audit.yaml  quick_test.yaml
datasets/: README.md  prompt_injection_seed.jsonl
deploy/: Dockerfile.prod  start.sh
endpoints/: __init__.py  anthropic.py  base.py  openai.py
payloads/: __init__.py  baseline.py  context.py  encoding.py  esf.py  extraction.py  insurance.py  jailbreak.py  policy.py  role.py
profiles/: mcp_grouped_agent.yaml
skill_sandbox/: Dockerfile  __init__.py  app.py  artifact_text.py  behavior_analysis.py  contextual_rules.py  disposition.py  finding_enrichment.py  governance.py  scan_rules.py  sensitive_data.py
tests/: test_architecture_analysis.py  test_basic.py  test_contextual_rules.py  test_endpoints.py  test_esf.py  test_runner_config.py  test_skill_behavior_analysis.py  test_skill_fixtures.py  test_skill_sandbox_dockerfile.py  test_skill_sandbox_extraction.py  (+3 more)
(+47 files in other folders)
