[project]
name = "injecticide"
version = "0.0.1"
description = "Prompt injection stress-testing toolkit for cloud LLM endpoints"
requires-python = ">=3.10"
dependencies = ["requests", "rich"]
license = { file = "LICENSE" }
authors = [ { name="Injecticide Contributors" } ]

[tool.setuptools]
package-dir = {"" = "."}

